Terraform,Ansible/terraform-hr/instance.tf
resource "aws_instance" "example" {
  ami = var.AMIS[var.AWS_REGION]
  instance_type = "t2.micro"
}
